--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	  <h4>Contact information</h4>
         <p style="margin-left: 15px";>
 	      Home and work address:<br>
-	      Gloriantlaan 4, 3060 Bertem (Belgium)<br>
+	      Tervuursesteenweg 226/0001, 3060 Bertem (Belgium)<br>
 	      tel. +32 16 48 88 59<br>
 	      e-mail: germain.lietaer@kuleuven.be
 	    </p>
